--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,25 @@
     padding: 0;
     box-sizing: border-box;
 }
+.container {
+    width: 70%;
+    margin: 20px auto;
+}
+.mb-20 {
+    margin-bottom: 20px;
+}
+
+/* header */
+header {
+    width: 100%;
+}
 
 /* ***debug*** */
-
-
+div.header-top.debug {
+    height: 100px;
+    background-color: #e579e6;
+}
+div.header-bottom.debug {
+    height: 300px;
+    background-color: #e1d67a;
+}
