--- a/css/style.css
+++ b/css/style.css
@@ -11,18 +11,63 @@
 .mb-20 {
     margin-bottom: 20px;
 }
+.mr-2 {
+    margin-right: 2%;
+}
+.float-left {
+    float: left;
+}
+.clearfix::after {
+    content: '';
+    display: table;
+    clear: both;
+}
+
+
+/* *****debug***** */
+.debug .header-top {
+    height: 100px;
+    background-color: #e579e6;
+}
+.debug .header-bottom {
+    height: 300px;
+    background-color: #e1d67a;
+}
+main.debug {
+    height: 500px;
+    background-color: #0087ff;
+}
+.debug .main-title {
+    height: 50px;
+    background-color: #abcfe7;
+}
+.debug .col-left {
+    height: 410px;
+    background-color: #abcfe7;
+}
+.debug .main-content {
+    height: 410px;
+    background-color: #abcfe7;
+}
+.debug .col-right {
+    height: 410px;
+    background-color: #abcfe7;
+}
+
 
 /* header */
 header {
     width: 100%;
 }
 
-/* ***debug*** */
-div.header-top.debug {
-    height: 100px;
-    background-color: #e579e6;
+
+/* main */
+.col-left {
+    width: 25%;
 }
-div.header-bottom.debug {
-    height: 300px;
-    background-color: #e1d67a;
+.main-content {
+    width: 46%;
+}
+.col-right {
+    width: 25%;
 }
