--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,9 @@ main.debug {
     height: 410px;
     background-color: #abcfe7;
 }
+footer.debug {
+    background-color: #8900fe;
+}
 
 
 /* header */
@@ -70,4 +73,12 @@ header {
 }
 .col-right {
     width: 25%;
+}
+
+
+/* footer */
+footer {
+    width: 100%;
+    height: 40px;
+    margin-top: 10px;
 }
